fix: `Post` improve spacing logic

--- a/framework/core/less/forum/DiscussionPage.less
+++ b/framework/core/less/forum/DiscussionPage.less
@@ -25,7 +25,7 @@
 @media @tablet-up {
   .DiscussionPage {
     --sidebar-width: 150px;
-    --gap: 75px;
+    --gap: 55px;
 
     .Page {
       &-container {
@@ -34,6 +34,7 @@
 
       &-content {
         margin-top: 10px;
+        margin-inline-start: -20px;
       }
 
       &-sidebar {
