--- a/framework/core/less/forum/Post.less
+++ b/framework/core/less/forum/Post.less
@@ -3,7 +3,6 @@
 
 .Post {
   padding: 20px;
-  margin: -1px -20px;
   transition: 0.2s box-shadow, top 0.2s, opacity 0.2s;
   position: relative;
   top: 0;
